Related: tdf#94043 DOCX import: fix column separator handling

See wwSectionManager::SetCols() for the DOC import equivalent of this
code, if line width is 0, then there will be still no visible line.

Change-Id: Ifb0dc596e252a60cdac575fff2894aced1580c69